kubernetes/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: banking-app-service
  namespace: banking-dev

spec:
  type: ClusterIP

  selector:
    app: banking-app

  ports:
    - port: 80
      targetPort: 5000
      protocol: TCP
